tests/lean/protected_consts.lean.expected.out
foo.A : Prop
protected_consts.lean:14:7: error: unknown identifier 'A'
⁇ : ?M_1
foo.a : foo.A
protected_consts.lean:16:7: error: unknown identifier 'a'
⁇ : ?M_1
foo.A₁ : Prop
foo.A₂ : Prop
protected_consts.lean:19:7: error: unknown identifier 'A₁'
⁇ : ?M_1
protected_consts.lean:20:7: error: unknown identifier 'A₂'
⁇ : ?M_1
foo.a₁ : foo.A
foo.a₂ : foo.A
protected_consts.lean:23:7: error: unknown identifier 'a₁'
⁇ : ?M_1
protected_consts.lean:24:7: error: unknown identifier 'a₂'
⁇ : ?M_1
B : Prop
B : Prop
b : B
b : B
b₁ : B
b₂ : B
b₁ : B
b₂ : B
B₁ : Prop
B₂ : Prop
B₁ : Prop
B₂ : Prop
